# GBQM

./: README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
src/: auth.py  config.py  exceptions.py  gbq.py  main.py
src/GBQM/: __init__.py
src/kaisia/: cli.py  config.py  exceptions.py  gbq.py  main.py
